# SFML-Coding

./: README.md
1 first tests/: main
10 synth by recording/: main.cpp
11 voronoi synth recording pong/: main.cpp
12 gui project/: Makefile  ep_gui.hpp  main.cpp  save.txt
13 NetController/: Makefile  evp_draw.cpp  evp_draw.hpp  evp_noise.hpp  evp_server.cpp  evp_server.hpp  evp_voronoi.hpp  index.html  main.cpp  rocket_room.hpp  script.js  space_gen.hpp  util.js  voronoi_room.hpp
13 NetController/RoomServer/: control.html  login.html  script.js  test.html
14 physics/: Makefile  evp_geometry.hpp  main  main.cpp
14_cmake_proj/: CMakeLists.txt
14_cmake_proj/000_test/: CMakeLists.txt  main.cpp
14_cmake_proj/001_NetController/: CMakeLists.txt  main.cpp  rocket_room.hpp  space_gen.hpp  voronoi_room.hpp
14_cmake_proj/001_NetController/RoomServer/: script.js
14_cmake_proj/evp/: CMakeLists.txt  draw.cpp  server.cpp
2 neural robots (suspended)/: main  main.cpp
20 feromones/: Makefile  main.cpp
21 particles/: .main.cpp.swp  main.cpp
22 local multiplayer/: .arena.hpp.swp  .lobby.hpp.swp  .main.cpp.swp  arena.hpp  draw.hpp  lobby.hpp  main.cpp
3 polygon game/: Makefile  main  main.cpp
3 polygon game/1 voronoi-simplexnoise/: main.cpp
3 polygon game/2 pathfinding/: Makefile
3 polygon game/newest version/: main  main.cpp
4 udp networking/10 backup before restructuring/: main.cpp
4 udp networking/11 library v1/: evp_networking.hpp  main  main.cpp  networking.conf
5 sound synthesis/: Makefile  main.cpp
6 netpack/: Makefile  README.md  evp_networking.hpp  main  main.cpp
7 compiler/: Makefile  README.md  in.code  main.cpp
8 sound recorder/: main.cpp
9 vorinoi cell music/: Makefile  main.cpp
first tests/: Makefile  main.cpp
(+30 files in other folders)
